# dotenvx-plaintext-sync

./: .gitignore  README.md  pyproject.toml
dotenvx_ops/: cli.py  decryption.py  encryption.py
dotenvx_plaintext_sync/: cli.py  config.py  decryption.py  encryption.py  init.py
dotenvx_plaintext_sync/lib/: __init__.py  paths.py  validation.py
env_share/: config.py  init.py
env_share/lib/: paths.py  validation.py
