[project]
name = "dotenvx-ops"
version = "0.1.0"
description = "CLI tool for syncing encrypted .env files across teams using dotenvx"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "ramusuco" }
]
keywords = ["dotenv", "dotenvx", "encryption", "env", "sync", "ops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
dotenvx-ops = "dotenvx_ops.cli:main"

[project.urls]
Homepage = "https://github.com/ramusuco/dotenvx-ops"
Repository = "https://github.com/ramusuco/dotenvx-ops"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dotenvx_ops"]
